# store-intelligence

./: .env.example  .gitignore  Dockerfile  Dockerfile.app  Dockerfile.pipeline  README.md  bootstrap.sh  docker-compose.yml  pyproject.toml  start.sh
app/: anomalies.py  db.py  funnel.py  health.py  heatmap.py  ingestion.py  main.py  metrics.py  models.py
dashboard/: app.js  index.html  style.css
data/: pos_transactions.csv  store_layout.json
data/events/: ST1008_events.jsonl
docs/: CHOICES.md  DESIGN.md
pipeline/: detect.py  emit.py  pos_correlator.py  run.sh  staff.py  tracker.py  zone.py
scripts/: rebase_events.py  seed_events.py
tests/: conftest.py  test_anomalies.py  test_funnel.py  test_health.py  test_heatmap.py  test_ingest.py  test_metrics.py  test_pipeline.py  test_tracker_staff.py
